--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -175,8 +175,8 @@ site_state: true
 # Value before `||` delimeter is the target permalink.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
 social:
-  GitHub: Github地址 || github
-  E-Mail: mailto:邮箱地址 || envelope
+  GitHub: https://github.com/xieshang || github
+  E-Mail: mailto:3001385@qq.com || envelope
   #Weibo: https://weibo.com/yourname || weibo
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
